clusters/building-blocks/base/apps/flux/ui/cilium-netpol.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: capacitor-ingress-netpol
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
